--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
+    "react-scroll": "^1.9.3",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
